--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "gapi-script": "^1.2.0",
     "i18n-iso-countries": "^7.5.0",
     "js-cookie": "^3.0.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-google-charts": "^4.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.4.0",
