--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "csv-parser": "^3.0.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
